--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@chec/commerce.js": "^2.7.2",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@progress/kendo-drawing": "^1.11.0",
+    "@progress/kendo-licensing": "^1.2.0",
+    "@progress/kendo-react-form": "^4.8.0",
+    "@progress/kendo-react-inputs": "^4.8.0",
+    "@progress/kendo-react-intl": "^4.8.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.16.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
     "react-router-dom": "^5.2.0",
